// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBanner /> matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-3f2zt9-Center"
  >
    <div
      class="css-a8gq7t-ErrorBanner"
    >
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ErrorComponent /> matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    test
  </h1>
  <div
    class="css-3f2zt9-Center"
  >
    <div
      class="css-a8gq7t-ErrorBanner"
    />
  </div>
  <div
    class="css-3f2zt9-Center"
  >
    <button
      class="css-zrjck4-PrimaryButton"
    >
      Home
    </button>
  </div>
</DocumentFragment>
`;

exports[`<NotFound /> matches snapshot 1`] = `
<DocumentFragment>
  <h1>
    test
  </h1>
  <div
    class="css-3f2zt9-Center"
  >
    <div
      class="css-a8gq7t-ErrorBanner"
    >
      <span>
        Whoops, couldn't find data for this package!
      </span>
      <br />
      <span>
        <span
          class="css-fzjird-ClickLink"
        >
          Propose this package
        </span>
      </span>
    </div>
  </div>
  <div
    class="css-3f2zt9-Center"
  >
    <button
      class="css-zrjck4-PrimaryButton"
    >
      Home
    </button>
  </div>
</DocumentFragment>
`;
